--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>뉴스레터 이미지 호스팅 웹</title>
 </head>
 <body>
-    Hello
+    <p>뉴스레터 이미지 호스팅용 페이지입니다.</p>
     <img src="https://parkbh0206.github.io/newsletter-1.jpg" alt="newsletter-1" />
 </body>
 </html>
