--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>뉴스레터 이미지 호스팅 웹</title>
-</head>
-<body>
-    <p>뉴스레터 이미지 호스팅용 페이지입니다.</p>
-    <img src="https://parkbh0206.github.io/newsletter-1.jpg" alt="newsletter-1" />
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>도화지</title><script defer="defer" src="/static/js/main.ed8e8f88.js"></script><link href="/static/css/main.71faf032.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
